fix scrollbar issue

--- a/src/style.css
+++ b/src/style.css
@@ -8,6 +8,7 @@ body {
   background-color: #ddd;
   width: 100%;
   height: 100%;
+  margin: 0;
 }
 
 div#layout {
